grammar.js
    _node: ($, original) =>
      choice(
        prec(1, $.icu_expression),
        prec(1, $.interpolation),
        prec(1, $._any_statement),
        $.at_sign,
        original,
      ),

    // ---------- Overrides ----------
    text: (_) => /[^<>{}&@\s]([^<>{}&@]*[^<>{}&@\s])?/,

    // ----------- Statement block --------
    statement_block: ($) => prec.right(seq('{', repeat($._node), '}')),

    // ---------- Statements ----------
    _alternative_statement: ($) =>
      choice(
        field('alternative', $.else_statement),
        field('alternative_condition', $.else_if_statement),
        field('empty', $.empty_statement),
        field('placeholder', $.placeholder_statement),
        field('loading', $.loading_statement),
        field('error', $.error_statement),
      ),

    // ---------- Let Statement ----------
    let_statement: ($) =>
      prec.left(seq(alias($.let_start, $.control_keyword), $.assignment_expression, ';')),

    // ---------- Switch Statement ----------

    defer_statement: ($) =>
      prec.left(
        seq(
          alias($.defer_start, $.control_keyword),
          optional($.defer_trigger),
          field('body', $.statement_block),
        ),
      ),

    placeholder_statement: ($) =>
      prec.left(
        seq(
          alias($.placeholder_start, $.control_keyword),
          optional($.placeholder_minimum),
          field('body', $.statement_block),
        ),
      ),

    loading_statement: ($) =>
      prec.left(
        seq(
          alias($.loading_start, $.control_keyword),
          optional($.loading_condition),
          field('body', $.statement_block),
        ),
      ),

    error_statement: ($) =>
      seq(alias($.error_start, $.control_keyword), field('body', $.statement_block)),

    defer_trigger: ($) =>
      seq(
        '(',
        field('condition', $.defer_trigger_condition),
        optional(repeat(seq(';', field('condition', $.defer_trigger_condition)))),
        ')',
      ),

    placeholder_minimum: ($) => seq('(', field('minimum', $.timed_expression), ')'),

    loading_condition: ($) =>
      seq(
        '(',
        field('condition', $.timed_expression),
        optional(seq(';', field('condition', $.timed_expression))),
        ')',
      ),

    defer_trigger_condition: ($) =>
      seq(
        optional(alias('prefetch', $.prefetch_keyword)),
        choice(
          seq(alias('when', $.special_keyword), field('trigger', $._any_expression)),
          seq(alias('on', $.special_keyword), field('trigger', $._primitive)),
        ),
      ),

    timed_expression: ($) =>
      seq(alias(choice('after', 'minimum'), $.special_keyword), field('value', $.number)),

    // ---------- For Statement ----------
    if_statement: ($) =>
      prec.right(
        seq(
          alias($.if_start, $.control_keyword),
          '(',
          field('condition', $.if_condition),
          optional(field('reference', $.if_reference)),
          ')',
          field('consequence', $.statement_block),
          optional(repeat($._alternative_statement)),
        ),
      ),

    else_if_statement: ($) =>
      prec.right(
        seq(
          alias($.else_if_start, $.control_keyword),
          '(',
          field('condition', $.if_condition),
          optional(field('reference', $.if_reference)),
          ')',
          field('consequence', $.statement_block),
        ),
      ),

    else_statement: ($) =>
      prec.right(
        seq(alias($.else_start, $.control_keyword), field('body', $.statement_block)),
      ),

    if_condition: ($) => prec.right(PREC.CALL, $._any_expression),
    if_reference: ($) => seq(';', alias('as', $.special_keyword), $.identifier),

    // ---------- Expressions -----------
    _any_expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.expression,
        $.ternary_expression,
        $.nullish_coalescing_expression,
        prec(3, $.conditional_expression),
      ),

    assignment_expression: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._any_expression)),

    // -------- ICU expressions ---------
    interpolation: ($) =>
      prec.right(
        PREC.INTERPOLATION,
        seq(
          alias($._interpolation_start, '{{'),
          choice($._any_expression, $.concatenation_expression),
          alias($._interpolation_end, '}}'),
        ),
      ),

    expression: ($) =>
      prec.left(seq($._primitive, optional(field('pipes', $.pipe_sequence)))),

    // Unary expression
    unary_expression: ($) =>
      seq(
        field('operator', alias('!', $.unary_operator)),
        field('value', choice($.expression, $.unary_expression)),
      ),

    // Binary expression
    binary_expression: ($) =>
      prec.left(
        PREC.CALL + 1, // Increase precedence slightly above CALL to ensure nesting
        seq(
          field('left', choice($.expression, $.binary_expression)),
          field('operator', $._binary_op),
          field('right', $.expression),
        ),
      ),

    // Ternary expression
    conditional_expression: ($) =>
      prec.right(
        PREC.CALL,
        seq(
          field('left', choice($._primitive, $.unary_expression, $.binary_expression)),
          alias(choice('||', '&&'), $.conditional_operator),
          field(
            'right',
            choice(
              $.expression,
              $.unary_expression,
              $.binary_expression,
              $.conditional_expression,
            ),
          ),
        ),
      ),

    // ---------- Pipes ---------
    pipe_sequence: ($) =>
      prec.left(PREC.PIPE, repeat1(seq(alias('|', $.pipe_operator), $.pipe_call))),

    pipe_call: ($) =>
      prec.left(
        PREC.PIPE,
        seq(field('name', $.identifier), optional(field('arguments', $.pipe_arguments))),
      ),

    _primitive: ($) =>
      choice(
        $.object,
        $.array,
        $.identifier,
        $.string,
        $.number,
        $.group,
        $.call_expression,
        $.member_expression,
        $.bracket_expression,
      ),

    // Object
    object: ($) => seq('{', commaSep($.pair), optional(','), '}'),
    pair: ($) =>
      seq(
        field('key', choice($.identifier, $.string)),
        optional(seq(':', field('value', $._any_expression))),
      ),

    // Array
    identifier: () => /[a-zA-Z_\$][a-zA-Z_0-9\-\$]*/,

    number_fragment: () => /\-?[0-9]+\.?[0-9]*/,

    number: ($) =>
      choice($.number_fragment, seq($.number_fragment, alias(choice('ms', 's'), $.unit))),

    // Group
    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('function', $.identifier),
          '(',
          optional(field('arguments', $.arguments)),
          ')',
        ),
      ),
    arguments: ($) =>
      seq(
        choice($._primitive, $.binary_expression, $.unary_expression),
        repeat(seq(',', $._primitive)),
      ),

    // Member expression
    member_expression: ($) =>
      seq(
        field('object', $._primitive),
        choice(
          seq(
            choice('.', '?.', '!.'),
            choice(field('property', $.identifier), field('call', $.call_expression)),
          ),
        ),
      ),

    // Bracket expression
    _binary_op: () =>
      choice(
        '+',
        '-',
        '/',
        '*',
        '%',
        '==',
        '===',
        '!=',
        '!==',
        '&&',
        '||',
        '<',
        '<=',
        '>',
        '>=',
      ),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}
